# agents-gateway

./: .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  Dockerfile.worker  GitVersion.yml  Makefile  README.md  app.py  buildspec.worker.yml  buildspec.yml  compound-engineering.local.md  mkdocs.yml  pyproject.toml  worker.py
.claude/agents/: backend-implementer.md  code-reviewer.md  frontend-builder.md  implementation-planner.md  plan-reviewer.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: changelog.md  index.md  llms.txt
docs/api-reference/: configuration.md  exceptions.md  gateway.md  hooks.md
docs/deployment/: docker.md  production.md
docs/getting-started/: installation.md  project-structure.md  quickstart.md
docs/guides/: agents.md  authentication.md  cli.md  configuration.md  context-retrieval.md  cors.md  dashboard.md  delegation.md  mcp-servers.md  memory.md  mounting.md  notifications.md  openapi.md  persistence.md  queue.md  rate-limiting.md  scheduling.md  security-headers.md  skills.md  structured-output.md  telemetry.md  tools.md
docs/plans/: 01-package-scaffolding-and-config.md  02-workspace-loader.md  03-tool-registry.md  04-llm-client-and-execution-engine.md  05-tool-executors.md  06-telemetry-and-persistence.md  07-cli.md  08-api-layer-and-gateway.md  08b-chat-endpoint.md  08c-cli-chat.md  09-auth-middleware.md  10-notifications.md  11-streaming-and-async.md  11b-queue-based-execution.md  12-scheduler-and-hot-reload.md  13-approval-gates-and-audit.md  14-batch-events-polish-publish.md  2026-02-18-feat-agent-gateway-framework-plan.md  2026-02-18-feat-example-project-e2e-testing-plan.md  2026-02-18-feat-pluggable-auth-providers-plan.md  2026-02-18-feat-pluggable-persistence-backends-plan.md  2026-02-18-feat-streaming-async-queue-backends-plan.md  2026-02-19-feat-async-execution-status-tracking-plan.md  2026-02-19-feat-pluggable-notification-backends-plan.md  2026-02-19-feat-update-test-project-full-stack-plan.md  2026-02-20-feat-agent-input-schema-plan.md  2026-02-20-feat-agent-memory-system-plan.md  2026-02-20-feat-agent-public-metadata-plan.md  2026-02-20-feat-agent-rag-context-support-plan.md  2026-02-20-feat-cron-scheduling-engine-plan.md  2026-02-20-feat-skill-redesign-workflow-engine-plan.md  2026-02-20-refactor-remove-config-md-plan.md  2026-02-21-feat-chat-schema-intelligence-plan.md  2026-02-21-feat-dashboard-plan.md  2026-02-21-feat-dashboard-ui-auth-theming-plan.md  2026-02-21-feat-multi-user-memory-and-conversation-persistence-plan.md  2026-02-22-feat-dashboard-redesign-plan.md  2026-02-22-pre-publish-review.md  2026-02-23-feat-security-headers-middleware-plan.md  2026-02-26-feat-super-admin-dashboard-management.md  (+5 more)
examples/test-project/: .env.example  README.md  app.py  app_mounted.py  docker-compose.yml  mcp_test_server.py  pgvector_memory.py  pyproject.toml  retrievers.py  seed_admin_schedule.py  serve_email.py  serve_light.py
src/agent_gateway/: __init__.py  config.py  exceptions.py  gateway.py  hooks.py  ratelimit.py  secrets.py
tests/: conftest.py  test_config.py  test_exceptions.py  test_gateway_stub.py  test_hooks.py  test_mount.py
tests/test_api/: test_admin_schedule_routes.py  test_execution_routes.py
tests/test_auth/: test_api_key_provider.py  test_composite.py  test_config.py  test_domain.py  test_integration.py  test_middleware.py  test_scopes.py
tests/test_chat/: test_chat_endpoint.py  test_session.py
tests/test_cli/: test_check.py  test_init.py  test_invoke.py  test_list.py  test_version.py
tests/test_context/: conftest.py  test_prompt_integration.py  test_protocol.py  test_registry.py  test_static_context.py
tests/test_dashboard/: conftest.py  test_admin_login_oauth.py  test_auth.py  test_branding.py  test_models.py  test_oauth2.py  test_router.py
tests/test_e2e/: conftest.py  test_chat.py  test_cli.py  test_errors.py  test_health_introspection.py  test_invoke.py  test_schedules.py  test_travel_planner.py
tests/test_engine/: conftest.py  test_delegation.py  test_executor.py  test_executor_cancel.py  test_executor_errors.py  test_executor_guardrails.py  test_executor_parallel.py  test_executor_timeouts.py  test_input.py  (+6 more)
todos/: 010-complete-p3-remove-yagni-methods.md  011-complete-p3-batch-schedule-upserts-at-startup.md  012-pending-p1-check-py-tool-count-shadowing.md  013-pending-p1-type-aliases-any-workflow.md  014-pending-p2-precompile-bracket-regex.md  015-pending-p2-unbounded-parallel-fanout.md  016-pending-p2-error-detail-leakage.md  017-pending-p2-consolidate-resolve-skill-tools.md  018-pending-p2-api-skill-workflow-info.md  019-complete-p3-inline-split-path.md  020-complete-p3-workflow-result-typeddict.md  021-complete-p3-hardcoded-system-prompt.md  022-complete-p1-streaming-chat-missing-await.md  023-complete-p1-retriever-timeout-and-concurrency.md  024-complete-p2-remove-dead-context-error.md  025-complete-p2-retriever-output-size-limits.md  026-complete-p2-introspection-rag-metadata.md  027-complete-p2-explicit-paths-any-type.md  028-complete-p3-remove-unused-has-method.md  029-complete-p3-deduplicate-example-retriever.md  030-complete-p3-deduplicate-test-fakes.md  031-pending-p1-rename-memoryerror-shadows-builtin.md  032-pending-p1-add-dispose-to-memory-manager.md  033-pending-p1-path-traversal-agent-id-validation.md  034-pending-p1-sql-injection-pgvector-example.md  035-pending-p1-prompt-injection-via-memory.md  036-pending-p1-unbounded-auto-extraction-tasks.md  037-pending-p1-non-atomic-compaction.md  038-pending-p2-sync-file-io-blocks-event-loop.md  039-pending-p2-reload-missing-memory-tools.md  040-pending-p2-unbounded-memory-content-length.md  041-pending-p2-assert-in-production-code.md  042-pending-p2-duplicate-memory-block-logic.md  043-pending-p2-cache-null-memory-repo.md  044-complete-p3-remove-yagni-fields-and-dead-code.md  045-complete-p3-consider-removing-compaction-machinery.md  046-complete-p3-improve-type-safety.md  047-complete-p3-add-memory-to-introspection-api.md  048-complete-p3-consider-collapsing-protocol-layers.md  049-complete-p3-consider-memory-rest-api.md  (+12 more)
(+339 files in other folders)
