[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-gateway"
version = "0.1.0"
description = "An opinionated FastAPI extension for building API-first AI agent services"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "HonesDev" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "litellm>=1.40",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "python-frontmatter>=1.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "typer>=0.12",
    "watchfiles>=0.21",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-semantic-conventions>=0.45b",
    "apscheduler>=4.0.0a1",
]

[project.optional-dependencies]
otlp = [
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "opentelemetry-exporter-otlp-proto-http>=1.24",
]
slack = ["slack-bolt>=1.18"]
postgresql = ["asyncpg>=0.29", "psycopg[binary]>=3.1"]
redis = ["redis>=5.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]
all = ["agent-gateway[otlp,slack,postgresql,redis]"]

[project.scripts]
agent-gateway = "agent_gateway.cli.main:app"

[project.urls]
Homepage = "https://github.com/honesdev/agent-gateway"
Repository = "https://github.com/honesdev/agent-gateway"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_gateway"]

[tool.uv.workspace]
members = ["examples/test-project"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "frontmatter"
ignore_missing_imports = true
