[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "agents-gateway"
dynamic = ["version"]
description = "A FastAPI extension for building API-first AI agent services"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Vincent Nyanga", email = "vince.nyanga@protonmail.ch" },
]
maintainers = [
    { name = "Vincent Nyanga", email = "vince.nyanga@protonmail.ch" },
]
keywords = ["ai", "agents", "fastapi", "llm", "chatbot", "api", "gateway", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "litellm>=1.40",
    "sqlalchemy>=2.0",
    "python-frontmatter>=1.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "typer>=0.12",
    "watchfiles>=0.21",
    "jsonschema>=4.21",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-semantic-conventions>=0.45b",
    "apscheduler>=3.10,<4",
    "greenlet>=3.3.1",
    "cryptography>=42.0",
    "mcp>=1.20",
]

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.20", "alembic>=1.13"]
postgres = ["asyncpg>=0.29", "alembic>=1.13"]
postgresql = ["agents-gateway[postgres]"]  # backward-compat alias
otlp = [
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "opentelemetry-exporter-otlp-proto-http>=1.24",
]
gcp = ["google-auth>=2.20"]
oauth2 = ["PyJWT[crypto]>=2.8"]
slack = ["slack-bolt>=1.18"]
redis = ["redis>=5.0"]
rabbitmq = ["aio-pika>=9.0"]
rate-limiting = ["slowapi>=0.1.9"]
webhooks = ["jinja2>=3.1"]
dashboard = [
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "types-jsonschema>=4.21",
    "PyJWT[crypto]>=2.8",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "testcontainers[postgres,redis,rabbitmq]>=4.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "aio-pika>=9.0",
    "jinja2>=3.1",
    "slack-bolt>=1.18",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
    "slowapi>=0.1.9",
]
docs = [
    "mkdocs-material>=9.5",
]
all = ["agents-gateway[sqlite,postgres,otlp,oauth2,slack,webhooks,redis,rabbitmq,dashboard,rate-limiting]"]

[project.scripts]
agents-gateway = "agent_gateway.cli.main:app"

[project.urls]
Homepage = "https://honesdev.com/agents-gateway"
Repository = "https://github.com/vince-nyanga/agents-gateway"
Documentation = "https://vince-nyanga.github.io/agents-gateway/"
Issues = "https://github.com/vince-nyanga/agents-gateway/issues"
Changelog = "https://github.com/vince-nyanga/agents-gateway/releases"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/agent_gateway/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_gateway"]


[tool.uv.workspace]
members = ["examples/test-project"]

[tool.ruff]
target-version = "py311"
line-length = 99
exclude = ["src/agent_gateway/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
# FastAPI Depends() in function defaults is idiomatic and intentional
"src/agent_gateway/dashboard/router.py" = ["B008"]
"src/agent_gateway/cli/*.py" = ["B008"]
# SQL string literals that exceed line length
"src/agent_gateway/persistence/backends/sql/repository.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests requiring real LLM API keys (GEMINI_API_KEY)",
    "postgres: PostgreSQL integration tests requiring Docker",
    "redis: Redis integration tests requiring Docker",
    "rabbitmq: RabbitMQ integration tests requiring Docker",
]

[tool.coverage.run]
omit = [
    "examples/*",
    "src/agent_gateway/_version.py",
    "src/agent_gateway/**/null.py",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "frontmatter"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "litellm.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opentelemetry.exporter.otlp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asyncpg"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jwt.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aio_pika.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jinja2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "slack_sdk.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "slack_bolt.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "slowapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

# SQLAlchemy column expressions on class objects are a known mypy limitation —
# accessing Model.column for WHERE clauses raises [misc] which cannot be suppressed
# inline without breaking the existing [arg-type] ignores on the same lines.
[[tool.mypy.overrides]]
module = "agent_gateway.persistence.backends.sql.repository"
disable_error_codes = ["misc"]

[[tool.mypy.overrides]]
module = "agent_gateway.memory.backends.sql"
disable_error_codes = ["misc"]

[dependency-groups]
dev = [
    "flower>=2.0.1",
]
